@@ -30,7 +30,13 @@ arpsnmp \- keep track of ethernet/ip address pairings
 ] [
 .B -f
 .I datafile
-]
+] [
+.B -s
+.I sendmailprog
+] [
+.B -t
+.I mailto
+] [
 .I file
 [
 .I ...
@@ -43,15 +49,13 @@ and reports certain changes via email.
 reads information from a file (usually generated by
 .BR snmpwalk (8)).
 .LP
-The
 .B -d
-flag is used enable debugging. This also inhibits mailing the reports.
+is used enable debugging. This also inhibits mailing the reports.
 Instead, they are sent to
 .IR stderr .
 .LP
-The
 .B -f
-flag is used to set the ethernet/ip address database filename.
+is used to set the ethernet/ip address database filename.
 The default is
 .IR arp.dat .
 .LP
@@ -59,6 +63,19 @@ Note that an empty
 .I arp.dat
 file must be created before the first time you run
 .BR arpsnmp .
+.LP
+.B -s
+flag is used to specify the path to the sendmail program.
+Any program that takes the option -odi and then text from stdin
+can be substituted. This is useful for redirecting reports
+to log files instead of mail.
+.LP
+.B -t
+option is used to specify the e-mail address to which reports will be
+sent.  By default, reports are sent to
+.I root
+on the local machine.
+
 .LP
 .SH "REPORT MESSAGES"
 (See the
